# titanic_pred_ml

./: .gitignore  pyproject.toml  pyrightconfig.json
notebooks/titanic/: ade.ipynb  main.ipynb
notebooks/titanic/.ipynb_checkpoints/: ade-checkpoint.ipynb
