[project]
name = "practice-feat-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feature-engine>=1.8.2",
    "jupyterlab>=4.3.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "spyder>=6.0.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
